--- a/index.css
+++ b/index.css
@@ -1,25 +1,70 @@
-*{
-    font-family: arial;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+h1, h2, ul{
+    font-family: Poppins;
 }
 
-@media (max-width: 600px){
-    header, section{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
+p, li{
+    font-family: Roboto;
+}
 
-    img{
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-    }
+/* gerais */
+header, section, footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
 
-   ul{
+.lorem{
+    margin-top: 0rem;
+    margin-bottom: 2rem;
+    margin-inline: 2rem;
+    text-align: justify;
+}
+
+body{
+    margin: 0rem;
+}
+
+/* section 1 */
+
+h1{
+    margin: 1rem;
+}
+
+.ftperfil{
+    width: 15rem;
+    height: 15rem;
+    border-radius: 50%;
+}
+
+.icon{
+    width: 1.5rem;
+     height: 1.5rem;
+}
+
+.iconcontainer{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.bg{
+    background-color: rgb(110, 185, 127);
+    padding-bottom: 1rem;
+}
+
+/* section 3 */
+ul{
     padding: 0;
-   }
-   
+}
 
+/* footer */
 
+footer{
+    background-color: rgb(34, 34, 34);
+    color: azure;
+    margin-top: 2rem;
+    padding-block: 1rem;
 }
