--- a/index.css
+++ b/index.css
@@ -3,5 +3,23 @@
 }
 
 @media (max-width: 600px){
-    
+    header, section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    img{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+    }
+
+   ul{
+    padding: 0;
+   }
+   
+
+
 }
